@@ -1,3 +1,6 @@
+Sat Sep 18 07:16:30 CEST 2010
+	Adding support for SHOUTcast. -CG
+
 Wed Sep 15 09:33:46 CEST 2010
 	Fixed double-free. -CG/ES
 
